Primitive implementation of collapsible entries